src/snapshots/jsonptr__assign__toml__tests__test-11.snap
---
source: src/assign.rs
description: asserting that the TOML data is as expected after assignment
info:
  data:
    foo:
      - bar: baz
      - bar: qux
  ptr: /foo/-/bar
  assign: quux
---
{ foo = [{ bar = "baz" }, { bar = "qux" }, { bar = "quux" }] }
