src/snapshots/jsonptr__assign__toml__tests__test-2.snap
---
source: src/assign.rs
description: asserting that the TOML data is as expected after assignment
info:
  data: {}
  ptr: /foo/-/bar
  assign: baz
---
{ foo = [{ bar = "baz" }] }
